--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.0.9",
     "framer-motion": "^12.4.7",
     "next": "15.2.0",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scroll-parallax": "^3.4.5",
-    "swiper": "^11.2.4",
-    "tailwindcss": "^4.0.9"
+    "swiper": "^11.2.4"
   }
 }
